// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepConfigurationFeature should submit a form with a git repository 1`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-white pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <div
            class="space-y-10"
          >
            <section
              class="flex flex-col space-y-2"
            >
              <h1
                class="text-neutral-400 text-xl font-bold"
              >
                Terraform configuration
              </h1>
              <p
                class="text-sm text-neutral-350"
              >
                Customize the resources assigned to the service.
              </p>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <div
                class="space-y-1"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Core configuration
                </h2>
                <p
                  class="text-sm text-neutral-350"
                >
                  Basic Terraform setup and state management settings.
                </p>
              </div>
              <div
                class=""
              >
                <div
                  class="input input--select    "
                  data-testid="select"
                >
                  <label
                    class="top-1.5 translate-y-2 text-sm"
                    for="State configuration"
                  >
                    State configuration
                  </label>
                  <div
                    class=" css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-4-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="input-select__control css-13cymwt-control"
                    >
                      <div
                        class="input-select__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="input-select__placeholder css-1jqq78o-placeholder"
                          id="react-select-4-placeholder"
                        >
                          Select...
                        </div>
                        <input
                          aria-autocomplete="list"
                          aria-describedby="react-select-4-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-readonly="true"
                          class="css-mohuvp-dummyInput-DummyInput"
                          id="State configuration"
                          inputmode="none"
                          role="combobox"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="State configuration"
                      type="hidden"
                      value=""
                    />
                  </div>
                  <input
                    name="State configuration"
                    type="hidden"
                    value=""
                  />
                  <div
                    class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                  >
                    <span
                      class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                      role="img"
                    />
                  </div>
                </div>
                <p
                  class="mt-0.5 px-3 text-xs font-normal text-neutral-350"
                >
                  Select the Terraform version to use for the service
                </p>
              </div>
              <div
                class=""
              >
                <div
                  class="input input--select  !bg-neutral-100 !border-neutral-250 !pointer-events-none !border-neutral-250 !bg-neutral-100 "
                  data-testid="select"
                >
                  <label
                    class="top-1.5 translate-y-2 text-sm"
                    for="State management"
                  >
                    State management
                  </label>
                  <div
                    class="input-select--is-disabled css-3iigni-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-5-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="input-select__control input-select__control--is-disabled css-16xfy0z-control"
                    >
                      <div
                        class="input-select__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="input-select__placeholder css-1jqq78o-placeholder"
                          id="react-select-5-placeholder"
                        >
                          Select...
                        </div>
                        <input
                          aria-autocomplete="list"
                          aria-describedby="react-select-5-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-readonly="true"
                          class="css-mohuvp-dummyInput-DummyInput"
                          disabled=""
                          id="State management"
                          inputmode="none"
                          role="combobox"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="input-select__indicator-separator css-894a34-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <input
                    name="State management"
                    type="hidden"
                    value=""
                  />
                  <div
                    class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                  >
                    <span
                      class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                      role="img"
                    />
                  </div>
                </div>
                <p
                  class="mt-0.5 px-3 text-xs font-normal text-neutral-350"
                >
                  Configure where the state should be located
                </p>
              </div>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <div
                class="space-y-1"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Execution settings
                </h2>
                <p
                  class="text-sm text-neutral-350"
                >
                  Configure how Terraform operations are executed.
                </p>
              </div>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input     "
                  >
                    <div
                      class=""
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="Execution timeout (in minutes)"
                      >
                        Execution timeout (in minutes)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        id="Execution timeout (in minutes)"
                        name="timeout_sec"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="mt-0.5 px-3 text-xs font-normal text-neutral-350 dark:text-neutral-50"
                >
                  Maximum duration for Terraform operations
                </p>
              </div>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <h2
                class="text-neutral-400 text-base font-bold"
              >
                Execution credentials
              </h2>
              <div
                class="flex flex-row gap-x-3 border rounded text-sm bg-neutral-100 border-neutral-250 text-neutral-350 p-4"
                data-accent-color="neutral"
              >
                <div
                  class="-order-1 mr-auto gap-x-3 text-neutral-400"
                >
                  <div
                    aria-required="false"
                    class="flex flex-col gap-5"
                    dir="ltr"
                    role="radiogroup"
                    style="outline: none;"
                    tabindex="0"
                  >
                    <label
                      class="grid grid-cols-[16px_1fr] gap-3"
                    >
                      <button
                        aria-checked="false"
                        class="group transition bg-neutral-100 dark:bg-neutral-500 border border-neutral-300 w-[20px] h-[20px] rounded-full hover:border-2 hover:border-brand-500 data-[state=checked]:bg-brand-500 data-[state=checked]:border-2 data-[state=checked]:border-brand-500 disabled:hover:border disabled:bg-neutral-150 disabled:border-neutral-250 disabled:data-[state=checked]:hover:border-2 disabled:data-[state=checked]:border-brand-300 disabled:data-[state=checked]:bg-brand-300"
                        data-radix-collection-item=""
                        data-state="unchecked"
                        role="radio"
                        tabindex="-1"
                        type="button"
                        value="true"
                      />
                      <div
                        class="flex flex-col gap-1"
                      >
                        <span
                          class="font-medium"
                        >
                          Cluster credentials
                        </span>
                        <span
                          class="text-sm text-neutral-350"
                        >
                          Use the cluster credentials to execute this Terraform manifest.
                        </span>
                      </div>
                    </label>
                    <label
                      class="grid grid-cols-[16px_1fr] gap-3"
                    >
                      <button
                        aria-checked="true"
                        class="group transition bg-neutral-100 dark:bg-neutral-500 border border-neutral-300 w-[20px] h-[20px] rounded-full hover:border-2 hover:border-brand-500 data-[state=checked]:bg-brand-500 data-[state=checked]:border-2 data-[state=checked]:border-brand-500 disabled:hover:border disabled:bg-neutral-150 disabled:border-neutral-250 disabled:data-[state=checked]:hover:border-2 disabled:data-[state=checked]:border-brand-300 disabled:data-[state=checked]:bg-brand-300"
                        data-radix-collection-item=""
                        data-state="checked"
                        role="radio"
                        tabindex="-1"
                        type="button"
                        value="false"
                      >
                        <span
                          class="flex items-center justify-center w-full h-full relative after:content-[''] after:block after:w-[6px] after:h-[6px] after:rounded-[50%] after:bg-white after:absolute"
                          data-state="checked"
                        />
                      </button>
                      <div
                        class="flex flex-col gap-1"
                      >
                        <span
                          class="font-medium"
                        >
                          Environment variables
                        </span>
                        <span
                          class="text-sm text-neutral-350"
                        >
                          Use custom credentials injected as environment variables. To be used if cluster credential permissions are not enough.
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </div>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <h2
                class="text-neutral-400 text-base font-bold"
              >
                Job resources
              </h2>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input input--disabled input--disabled !border-neutral-250  input--label-up "
                  >
                    <div
                      class="pointer-events-none"
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="vCPU (milli)"
                      >
                        vCPU (milli)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        disabled=""
                        id="vCPU (milli)"
                        name="job_resources.cpu_milli"
                        type="text"
                        value="500"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input input--disabled input--disabled !border-neutral-250  input--label-up "
                  >
                    <div
                      class="pointer-events-none"
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="Memory (mb)"
                      >
                        Memory (mb)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        disabled=""
                        id="Memory (mb)"
                        name="job_resources.ram_mib"
                        type="text"
                        value="256"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input input--disabled input--disabled !border-neutral-250  input--label-up "
                  >
                    <div
                      class="pointer-events-none"
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="Storage (gb)"
                      >
                        Storage (gb)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        disabled=""
                        id="Storage (gb)"
                        name="job_resources.storage_gib"
                        type="text"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-row gap-x-3 p-3 border rounded text-sm border-sky-500 bg-sky-50 text-sky-500"
                data-accent-color="sky"
              >
                <div
                  class="-order-2 text-lg leading-6"
                >
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-info-circle "
                  />
                </div>
                <div
                  class="-order-1 mr-auto gap-x-3 text-neutral-400"
                >
                  Resources at job creation are set by default. If adjustments are needed, update them manually in the job settings after creation.
                </div>
              </div>
            </section>
          </div>
          <div
            class="mt-10 flex justify-between"
          >
            <button
              class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
              type="button"
            >
              Back
            </button>
            <div
              class="flex gap-3"
            >
              <button
                class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
                type="submit"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</body>
`;

exports[`StepConfigurationFeature should submit a form with a yaml 1`] = `
<body>
  <div />
  <div />
  <div>
    <div
      class="flex w-full overflow-auto"
    >
      <section
        class="w-full bg-white pt-14 overflow-auto"
      >
        <div
          class="relative mx-auto px-8 pb-14 max-w-content-with-navigation-left"
          data-testid="funnel-body-content"
        >
          <div
            class="space-y-10"
          >
            <section
              class="flex flex-col space-y-2"
            >
              <h1
                class="text-neutral-400 text-xl font-bold"
              >
                Terraform configuration
              </h1>
              <p
                class="text-sm text-neutral-350"
              >
                Customize the resources assigned to the service.
              </p>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <div
                class="space-y-1"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Core configuration
                </h2>
                <p
                  class="text-sm text-neutral-350"
                >
                  Basic Terraform setup and state management settings.
                </p>
              </div>
              <div
                class=""
              >
                <div
                  class="input input--select    "
                  data-testid="select"
                >
                  <label
                    class="top-1.5 translate-y-2 text-sm"
                    for="State configuration"
                  >
                    State configuration
                  </label>
                  <div
                    class=" css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-6-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="input-select__control css-13cymwt-control"
                    >
                      <div
                        class="input-select__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="input-select__placeholder css-1jqq78o-placeholder"
                          id="react-select-6-placeholder"
                        >
                          Select...
                        </div>
                        <input
                          aria-autocomplete="list"
                          aria-describedby="react-select-6-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-readonly="true"
                          class="css-mohuvp-dummyInput-DummyInput"
                          id="State configuration"
                          inputmode="none"
                          role="combobox"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="input-select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="State configuration"
                      type="hidden"
                      value=""
                    />
                  </div>
                  <input
                    name="State configuration"
                    type="hidden"
                    value=""
                  />
                  <div
                    class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                  >
                    <span
                      class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                      role="img"
                    />
                  </div>
                </div>
                <p
                  class="mt-0.5 px-3 text-xs font-normal text-neutral-350"
                >
                  Select the Terraform version to use for the service
                </p>
              </div>
              <div
                class=""
              >
                <div
                  class="input input--select  !bg-neutral-100 !border-neutral-250 !pointer-events-none !border-neutral-250 !bg-neutral-100 "
                  data-testid="select"
                >
                  <label
                    class="top-1.5 translate-y-2 text-sm"
                    for="State management"
                  >
                    State management
                  </label>
                  <div
                    class="input-select--is-disabled css-3iigni-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-7-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="input-select__control input-select__control--is-disabled css-16xfy0z-control"
                    >
                      <div
                        class="input-select__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="input-select__placeholder css-1jqq78o-placeholder"
                          id="react-select-7-placeholder"
                        >
                          Select...
                        </div>
                        <input
                          aria-autocomplete="list"
                          aria-describedby="react-select-7-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          aria-readonly="true"
                          class="css-mohuvp-dummyInput-DummyInput"
                          disabled=""
                          id="State management"
                          inputmode="none"
                          role="combobox"
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="input-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="input-select__indicator-separator css-894a34-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="input-select__indicator input-select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <input
                    name="State management"
                    type="hidden"
                    value=""
                  />
                  <div
                    class="pointer-events-none absolute right-4 top-1/2 -translate-y-1/2"
                  >
                    <span
                      class="icon-solid-angle-down shrink-0 text-sm text-neutral-400"
                      role="img"
                    />
                  </div>
                </div>
                <p
                  class="mt-0.5 px-3 text-xs font-normal text-neutral-350"
                >
                  Configure where the state should be located
                </p>
              </div>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <div
                class="space-y-1"
              >
                <h2
                  class="text-neutral-400 text-base font-bold"
                >
                  Execution settings
                </h2>
                <p
                  class="text-sm text-neutral-350"
                >
                  Configure how Terraform operations are executed.
                </p>
              </div>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input     "
                  >
                    <div
                      class=""
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="Execution timeout (in minutes)"
                      >
                        Execution timeout (in minutes)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        id="Execution timeout (in minutes)"
                        name="timeout_sec"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <p
                  class="mt-0.5 px-3 text-xs font-normal text-neutral-350 dark:text-neutral-50"
                >
                  Maximum duration for Terraform operations
                </p>
              </div>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <h2
                class="text-neutral-400 text-base font-bold"
              >
                Execution credentials
              </h2>
              <div
                class="flex flex-row gap-x-3 border rounded text-sm bg-neutral-100 border-neutral-250 text-neutral-350 p-4"
                data-accent-color="neutral"
              >
                <div
                  class="-order-1 mr-auto gap-x-3 text-neutral-400"
                >
                  <div
                    aria-required="false"
                    class="flex flex-col gap-5"
                    dir="ltr"
                    role="radiogroup"
                    style="outline: none;"
                    tabindex="0"
                  >
                    <label
                      class="grid grid-cols-[16px_1fr] gap-3"
                    >
                      <button
                        aria-checked="false"
                        class="group transition bg-neutral-100 dark:bg-neutral-500 border border-neutral-300 w-[20px] h-[20px] rounded-full hover:border-2 hover:border-brand-500 data-[state=checked]:bg-brand-500 data-[state=checked]:border-2 data-[state=checked]:border-brand-500 disabled:hover:border disabled:bg-neutral-150 disabled:border-neutral-250 disabled:data-[state=checked]:hover:border-2 disabled:data-[state=checked]:border-brand-300 disabled:data-[state=checked]:bg-brand-300"
                        data-radix-collection-item=""
                        data-state="unchecked"
                        role="radio"
                        tabindex="-1"
                        type="button"
                        value="true"
                      />
                      <div
                        class="flex flex-col gap-1"
                      >
                        <span
                          class="font-medium"
                        >
                          Cluster credentials
                        </span>
                        <span
                          class="text-sm text-neutral-350"
                        >
                          Use the cluster credentials to execute this Terraform manifest.
                        </span>
                      </div>
                    </label>
                    <label
                      class="grid grid-cols-[16px_1fr] gap-3"
                    >
                      <button
                        aria-checked="true"
                        class="group transition bg-neutral-100 dark:bg-neutral-500 border border-neutral-300 w-[20px] h-[20px] rounded-full hover:border-2 hover:border-brand-500 data-[state=checked]:bg-brand-500 data-[state=checked]:border-2 data-[state=checked]:border-brand-500 disabled:hover:border disabled:bg-neutral-150 disabled:border-neutral-250 disabled:data-[state=checked]:hover:border-2 disabled:data-[state=checked]:border-brand-300 disabled:data-[state=checked]:bg-brand-300"
                        data-radix-collection-item=""
                        data-state="checked"
                        role="radio"
                        tabindex="-1"
                        type="button"
                        value="false"
                      >
                        <span
                          class="flex items-center justify-center w-full h-full relative after:content-[''] after:block after:w-[6px] after:h-[6px] after:rounded-[50%] after:bg-white after:absolute"
                          data-state="checked"
                        />
                      </button>
                      <div
                        class="flex flex-col gap-1"
                      >
                        <span
                          class="font-medium"
                        >
                          Environment variables
                        </span>
                        <span
                          class="text-sm text-neutral-350"
                        >
                          Use custom credentials injected as environment variables. To be used if cluster credential permissions are not enough.
                        </span>
                      </div>
                    </label>
                  </div>
                </div>
              </div>
            </section>
            <section
              class="flex flex-col gap-4"
            >
              <h2
                class="text-neutral-400 text-base font-bold"
              >
                Job resources
              </h2>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input input--disabled input--disabled !border-neutral-250  input--label-up "
                  >
                    <div
                      class="pointer-events-none"
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="vCPU (milli)"
                      >
                        vCPU (milli)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        disabled=""
                        id="vCPU (milli)"
                        name="job_resources.cpu_milli"
                        type="text"
                        value="500"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input input--disabled input--disabled !border-neutral-250  input--label-up "
                  >
                    <div
                      class="pointer-events-none"
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="Memory (mb)"
                      >
                        Memory (mb)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        disabled=""
                        id="Memory (mb)"
                        name="job_resources.ram_mib"
                        type="text"
                        value="256"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class=""
                data-testid="input-text-wrapper"
              >
                <div
                  class="relative"
                >
                  <div
                    aria-label="input-container"
                    class="input input--disabled input--disabled !border-neutral-250  input--label-up "
                  >
                    <div
                      class="pointer-events-none"
                    >
                      <label
                        class="translate-y-2 text-sm"
                        for="Storage (gb)"
                      >
                        Storage (gb)
                      </label>
                      <input
                        class="input__value "
                        data-testid="input-text"
                        disabled=""
                        id="Storage (gb)"
                        name="job_resources.storage_gib"
                        type="text"
                        value="1"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-row gap-x-3 p-3 border rounded text-sm border-sky-500 bg-sky-50 text-sky-500"
                data-accent-color="sky"
              >
                <div
                  class="-order-2 text-lg leading-6"
                >
                  <i
                    aria-hidden="true"
                    class="fa-regular fa-info-circle "
                  />
                </div>
                <div
                  class="-order-1 mr-auto gap-x-3 text-neutral-400"
                >
                  Resources at job creation are set by default. If adjustments are needed, update them manually in the job settings after creation.
                </div>
              </div>
            </section>
          </div>
          <div
            class="mt-10 flex justify-between"
          >
            <button
              class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 hover:[&:not(:focus-visible):not(:disabled)]:shadow-sm active:[&:not(:focus-visible)]:shadow-none outline-brand-500 text-sm h-11 px-5 rounded border border-transparent text-neutral-350 hover:[&:not(:active):not(:focus-visible)]:border-neutral-300 hover:[&:not(:disabled)]:text-neutral-400 dark:hover:[&:not(:disabled)]:text-neutral-250 focus-visible:text-neutral-400 active:bg-neutral-150 dark:active:bg-transparent active:text-neutral-400 disabled:text-neutral-300 disabled:bg-neutral-150 disabled:border-none"
              type="button"
            >
              Back
            </button>
            <div
              class="flex gap-3"
            >
              <button
                class="inline-flex items-center shrink-0 font-medium transition focus-visible:[&:not(:active)]:outline-2 outline-0 shadow-sm disabled:shadow-none active:shadow-none outline-neutral-500 text-sm h-11 px-5 rounded bg-brand-500 active:bg-brand-600 hover:bg-brand-400 text-white disabled:text-brand-300 disabled:bg-brand-100"
                type="submit"
              >
                Continue
              </button>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</body>
`;
